# desc

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  FIND_VERTEX_EDGE_SUMMARY.md  INNER_VALUE_IMPLEMENTATION.md  MIGRATION_PHASE1.md  PHASE1_2_SUMMARY.md  PHASE1_3_SUMMARY.md  PHASE1_COMPLETE.md  PHASE3_STEP1_SUMMARY.md  PHASE4_SUMMARY.md  README.md  TRAITS_REFACTORING.md  descriptor.md
.github/workflows/: ci.yml  release.yml
agents/: cmake_todo.md  dynamic_graph_todo.md  overall_plan.md
benchmark/: CMakeLists.txt  benchmark_main.cpp  benchmark_vertex_access.cpp
cmake/: CPM.cmake  CodeCoverage.cmake  CompilerCache.cmake  CompilerWarnings.cmake  Format.cmake  InstallConfig.cmake  PrecompiledHeaders.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalysis.cmake  graph3-config.cmake.in
docs/: common_graph_guidelines.md  container_interface.md  cpo.md  edge_value_concepts.md  graph_cpo_implementation.md  graph_cpo_order.md  migration_plan.md  vertex_inner_value_patterns.md  vertex_storage_concepts.md
example/: CMakeLists.txt
examples/: CMakeLists.txt  basic_usage.cpp
include/desc/: descriptor.hpp  descriptor_traits.hpp  edge_descriptor.hpp  edge_descriptor_view.hpp  vertex_descriptor.hpp  vertex_descriptor_view.hpp
include/graph/: adjacency_list_concepts.hpp  adjacency_list_traits.hpp  descriptor.hpp  descriptor_traits.hpp  edge_descriptor.hpp  edge_descriptor_view.hpp  edgelist.hpp  graph.hpp  graph_info.hpp  graph_utility.hpp  vertex_descriptor.hpp  vertex_descriptor_view.hpp
include/graph/container/: compressed_graph.hpp  container_utility.hpp  dynamic_graph.hpp
include/graph/container/traits/: dod_graph_traits.hpp  dofl_graph_traits.hpp  dol_graph_traits.hpp  dos_graph_traits.hpp  dov_graph_traits.hpp  mod_graph_traits.hpp  mofl_graph_traits.hpp  mol_graph_traits.hpp  mos_graph_traits.hpp  mov_graph_traits.hpp  uod_graph_traits.hpp  uofl_graph_traits.hpp  uol_graph_traits.hpp  uov_graph_traits.hpp  vod_graph_traits.hpp  vofl_graph_traits.hpp  vol_graph_traits.hpp  vos_graph_traits.hpp  vov_graph_traits.hpp
include/graph/detail/: graph_cpo.hpp
scripts/: format.sh
tests/: CMakeLists.txt  test_adjacency_list_edge_concepts.cpp  test_adjacency_list_traits.cpp  test_adjacency_list_vertex_concepts.cpp  test_compressed_graph.cpp  test_compressed_graph_cpo.cpp  test_contains_edge_cpo.cpp  test_degree_cpo.cpp  test_descriptor_traits.cpp  test_dynamic_edge_comparison.cpp  test_dynamic_graph_common.cpp  test_dynamic_graph_cpo_dod.cpp  test_dynamic_graph_cpo_dofl.cpp  test_dynamic_graph_cpo_dol.cpp  test_dynamic_graph_cpo_dos.cpp  test_dynamic_graph_cpo_dov.cpp  test_dynamic_graph_cpo_mod.cpp  test_dynamic_graph_cpo_mofl.cpp  test_dynamic_graph_cpo_mol.cpp  test_dynamic_graph_cpo_mos.cpp  test_dynamic_graph_cpo_mov.cpp  test_dynamic_graph_cpo_uod.cpp  test_dynamic_graph_cpo_uofl.cpp  test_dynamic_graph_cpo_uol.cpp  test_dynamic_graph_cpo_uov.cpp  test_dynamic_graph_cpo_vod.cpp  test_dynamic_graph_cpo_vofl.cpp  test_dynamic_graph_cpo_vol.cpp  test_dynamic_graph_cpo_vos.cpp  test_dynamic_graph_cpo_vov.cpp  test_dynamic_graph_dod.cpp  test_dynamic_graph_dofl.cpp  test_dynamic_graph_dol.cpp  test_dynamic_graph_dov.cpp  test_dynamic_graph_mod.cpp  test_dynamic_graph_mofl.cpp  test_dynamic_graph_mol.cpp  test_dynamic_graph_mov.cpp  test_dynamic_graph_uod.cpp  test_dynamic_graph_uofl.cpp  (+30 more)
