# Benchmark Configuration
# Performance benchmarks for graph library components

# Future: Add benchmark targets here
# Example:
# add_executable(graph_benchmark
#     benchmark_adjacency_list.cpp
#     benchmark_algorithms.cpp
# )
# target_link_libraries(graph_benchmark PRIVATE graph::graph benchmark::benchmark)
